--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <nav>
       <div class="nav-wrapper">
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger">
         <a href="#" class="brand-logo right">Logo</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
           <li><a href="sass.html">Home</a></li>
