Ubah teks dikit

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       <li class="collection-item avatar">
         <i class="material-icons circle red">play_arrow</i>
         <span class="title">Title</span>
-        <p>First Line <br>
-           Second Line
+        <p>FirstF Line <br>
+           SecondS Line
         </p>
         <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
       </li>
